<resources>
    <string name="app_name">Data Center</string>
    <string name="app_name_1">Data</string>
    <string name="app_name_2">Center</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Home</string>
    <string name="menu_file">File</string>
    <string name="menu_setting">Setting</string>
    <string name="text_header_file_latest">File Terbaru</string>
    <string name="text_more">Lihat Semua</string>
    <string name="text_new">Baru</string>
    <string name="text_add_folder">Buat Folder</string>
    <string name="text_upload_file">Unggah</string>
    <string name="text_take_picture">Ambil Foto</string>
    <string name="text_new_folder">Buat Folder Baru</string>
    <string name="text_save">Simpan</string>
    <string name="text_cancel">Batal</string>
    <string name="text_header_favorite">File Favorite</string>
    <string name="text_alert_favorite">Ketuk ikon titik tiga disamping file, lalu \"Tambahkan ke Favorite\".</string>
    <string name="text_share">Bagikan</string>
    <string name="text_rename">Ubah Nama</string>
    <string name="text_add_to_favorite">Tambahkan ke Favorite</string>
    <string name="text_details">Details</string>
    <string name="text_delete">Hapus</string>
    <string name="hint_search">Cari File</string>
    <string name="text_btn_login">Login</string>
    <string name="text_large_login">Selamat Datang</string>
    <string name="text_body_login">Masukkan email dan Password.</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="email_not_valid">Email tidak valid.</string>
    <string name="password_not_valid">Password tidak boleh kosong.</string>
    <string name="text_nothing_file_in_folder">Tidak ada folder atau file di dalam folder ini.</string>
    <string name="text_type_file">Tipe</string>
    <string name="text_type_size">Ukuran</string>
    <string name="text_time_ago">Waktu</string>
    <string name="change">Ubah Profil</string>
    <string name="change_password">Ubah Password</string>
    <string name="text_category_document">Documents</string>
    <string name="text_category_video">Videos</string>
    <string name="text_category_images">Images</string>
    <string name="text_category_music">Audios</string>
    <string name="text_post">Diposting oleh:</string>
    <string name="text_recent_upload">Unggahan Terbaru</string>
    <string name="text_recent_news">Berita Terbaru</string>
    <string name="hint_search_document">Cari Dokumen</string>
    <string name="text_logout">Logout</string>
    <string name="password_old_hint">Paswword Lama</string>
    <string name="fullname_hint">Nama Lengkap</string>
    <string name="nip_hint">NIP</string>
    <string name="text_playing">Playing Audio</string>
    <string name="password_confirm_hint">Confirm Password</string>
    <string name="text_edit_folder">Ubah Nama Folder</string>
    <string name="text_category_latest_file">File Terbaru</string>
    <string name="text_ascending">A-Z</string>
    <string name="text_preview_announcement">Lihat Lampiran</string>
    <string name="text_all">Semua</string>
</resources>