<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_200sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="login.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/text_large_login"
        style="@style/text_large_semi_bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/text_large_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animationView" />

    <TextView
        android:id="@+id/text_body_login"
        style="@style/text_body_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/text_body_login"
        android:textColor="@color/colorSecondary"
        app:layout_constraintEnd_toEndOf="@+id/text_large_login"
        app:layout_constraintStart_toStartOf="@+id/text_large_login"
        app:layout_constraintTop_toBottomOf="@+id/text_large_login" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ttl_email"
        style="@style/Widget.AppTheme.TextInputLayout.OutlineBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:hint="@string/email_hint"
        android:textColorHint="@color/colorSecondary"
        app:layout_constraintEnd_toEndOf="@+id/text_body_login"
        app:layout_constraintStart_toStartOf="@+id/text_body_login"
        app:layout_constraintTop_toBottomOf="@+id/text_body_login"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/colorSecondary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/primaryColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ttl_password"
        style="@style/Widget.AppTheme.TextInputLayout.OutlineBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:hint="@string/password_hint"
        android:textColorHint="@color/colorSecondary"
        app:boxStrokeWidthFocused="1dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/ttl_email"
        app:layout_constraintStart_toStartOf="@+id/ttl_email"
        app:layout_constraintTop_toBottomOf="@+id/ttl_email"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconTint="@color/colorSecondary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/primaryColor" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/text_large_semi_bold"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:enabled="false"
        android:text="@string/text_btn_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>