<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="@dimen/_250sdp"
    tools:context=".ui.dialog.DialogAddFragment">

    <TextView
        android:id="@+id/tv_header_add"
        style="@style/text_body_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/text_new"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/btn_add_folder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_header_add"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_20sdp"

            android:layout_weight="1"
            android:src="@drawable/ic_add_folder"
            app:tint="@color/dark" />

        <TextView
            style="@style/text_body_regular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/text_add_folder" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_add_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_add_folder"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_17sdp"
            android:layout_weight="1"
            android:src="@drawable/ic_uploads"
            app:tint="@color/dark" />

        <TextView
            style="@style/text_body_regular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/text_upload_file" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_take_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_add_file"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_17sdp"
            android:layout_weight="1"
            android:src="@drawable/ic_camera"
            app:tint="@color/dark" />

        <TextView
            style="@style/text_body_regular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/text_take_picture" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>