<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.detail.ChangeProfileFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/component_action_bar" />

    <FrameLayout
        android:id="@+id/fm_pict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_profile_pic" />

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="bottom"
            app:cardBackgroundColor="@color/colorSecondary"
            app:cardCornerRadius="10dp">


            <ImageView
                android:id="@+id/btn_change_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorSecondary"
                android:src="@drawable/baseline_camera_alt_24" />
        </androidx.cardview.widget.CardView>


    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ttl_fullName"

        style="@style/Widget.AppTheme.TextInputLayout.OutlineBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:hint="@string/fullname_hint"
        app:hintTextColor="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fm_pict">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ac_fullName"
            style="@style/text_body_regular"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:inputType="text"
            android:padding="@dimen/_10sdp"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ttl_email"

        style="@style/Widget.AppTheme.TextInputLayout.OutlineBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:hint="@string/email_hint"
        app:hintTextColor="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ttl_fullName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ac_email"
            style="@style/text_body_regular"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_10sdp"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ttl_nip"

        style="@style/Widget.AppTheme.TextInputLayout.OutlineBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:hint="@string/nip_hint"
        app:hintTextColor="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ttl_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ac_nip"
            style="@style/text_body_regular"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:inputType="text"
            android:padding="@dimen/_10sdp"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:cardBackgroundColor="@color/primaryColor"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            style="@style/text_semi_bold"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/text_save"
            android:textColor="@color/white" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>